--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Jon's Home</title>
   </head>
   <body>
-    <h1 class="headline-top">Jon's Home</h1>
+    <h1 class="headline-top">Jon's Home New</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
